--- a/Lecture 20/Lecture 20.ipynb
+++ b/Lecture 20/Lecture 20.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "102"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "77"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,6 +213,9 @@
    "source": [
     "# Write your own code\n",
     "\n",
+    "circuits.to_sql('circuits_sql',\n",
+    "                      con = con,\n",
+    "                      if_exists = 'replace')\n",
     "\n"
    ]
   },
@@ -242,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +343,8 @@
    "source": [
     "# Write your own code\n",
     "\n",
-    "\n",
+    "double_string = \"SELECT \\\"driverId\\\" FROM results;\"\n",
+    "print(double_string)\n",
     "\n",
     "\n"
    ]
@@ -369,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +572,7 @@
        "[1079 rows x 1 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,8 +580,11 @@
    "source": [
     "# Write your own code\n",
     "\n",
+    "try_yourself = pd.read_sql(text(\"SELECT SUM(points) as SUM_points \\\n",
+    "                             FROM results_sql \\\n",
+    "                             GROUP BY \\\"raceId\\\" ;\"),con)\n",
     "\n",
-    "\n",
+    "try_yourself\n",
     "\n"
    ]
   },
@@ -597,13 +604,379 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>raceId</th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "      <th>circuitId</th>\n",
+       "      <th>name</th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>url</th>\n",
+       "      <th>fp1_date</th>\n",
+       "      <th>fp1_time</th>\n",
+       "      <th>fp2_date</th>\n",
+       "      <th>fp2_time</th>\n",
+       "      <th>fp3_date</th>\n",
+       "      <th>fp3_time</th>\n",
+       "      <th>quali_date</th>\n",
+       "      <th>quali_time</th>\n",
+       "      <th>sprint_date</th>\n",
+       "      <th>sprint_time</th>\n",
+       "      <th>circuitId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Australian Grand Prix</td>\n",
+       "      <td>2009-03-29</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/2009_Australian_G...</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Malaysian Grand Prix</td>\n",
+       "      <td>2009-04-05</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/2009_Malaysian_Gr...</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Chinese Grand Prix</td>\n",
+       "      <td>2009-04-19</td>\n",
+       "      <td>07:00:00</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/2009_Chinese_Gran...</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Bahrain Grand Prix</td>\n",
+       "      <td>2009-04-26</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/2009_Bahrain_Gran...</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Spanish Grand Prix</td>\n",
+       "      <td>2009-05-10</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/2009_Spanish_Gran...</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1097</th>\n",
+       "      <td>1097</td>\n",
+       "      <td>1116</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>19</td>\n",
+       "      <td>69</td>\n",
+       "      <td>United States Grand Prix</td>\n",
+       "      <td>2023-10-22</td>\n",
+       "      <td>19:00:00</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/2023_United_Stat...</td>\n",
+       "      <td>2023-10-20</td>\n",
+       "      <td>17:30:00</td>\n",
+       "      <td>2023-10-21</td>\n",
+       "      <td>18:00:00</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>2023-10-20</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>2023-10-21</td>\n",
+       "      <td>22:00:00</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1098</th>\n",
+       "      <td>1098</td>\n",
+       "      <td>1117</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>20</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Mexico City Grand Prix</td>\n",
+       "      <td>2023-10-29</td>\n",
+       "      <td>20:00:00</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/2023_Mexico_City...</td>\n",
+       "      <td>2023-10-27</td>\n",
+       "      <td>18:30:00</td>\n",
+       "      <td>2023-10-27</td>\n",
+       "      <td>22:00:00</td>\n",
+       "      <td>2023-10-28</td>\n",
+       "      <td>17:30:00</td>\n",
+       "      <td>2023-10-28</td>\n",
+       "      <td>21:00:00</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1099</th>\n",
+       "      <td>1099</td>\n",
+       "      <td>1118</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>21</td>\n",
+       "      <td>18</td>\n",
+       "      <td>São Paulo Grand Prix</td>\n",
+       "      <td>2023-11-05</td>\n",
+       "      <td>17:00:00</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/2023_S%C3%A3o_Pa...</td>\n",
+       "      <td>2023-11-03</td>\n",
+       "      <td>14:30:00</td>\n",
+       "      <td>2023-11-04</td>\n",
+       "      <td>14:30:00</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>2023-11-03</td>\n",
+       "      <td>18:00:00</td>\n",
+       "      <td>2023-11-04</td>\n",
+       "      <td>18:30:00</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>1100</td>\n",
+       "      <td>1119</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>22</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Las Vegas Grand Prix</td>\n",
+       "      <td>2023-11-19</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/2023_Las_Vegas_G...</td>\n",
+       "      <td>2023-11-17</td>\n",
+       "      <td>04:30:00</td>\n",
+       "      <td>2023-11-17</td>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>2023-11-18</td>\n",
+       "      <td>04:30:00</td>\n",
+       "      <td>2023-11-18</td>\n",
+       "      <td>08:00:00</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1101</th>\n",
+       "      <td>1101</td>\n",
+       "      <td>1120</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
+       "      <td>2023-11-26</td>\n",
+       "      <td>13:00:00</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/2023_Abu_Dhabi_G...</td>\n",
+       "      <td>2023-11-24</td>\n",
+       "      <td>09:30:00</td>\n",
+       "      <td>2023-11-24</td>\n",
+       "      <td>13:00:00</td>\n",
+       "      <td>2023-11-25</td>\n",
+       "      <td>10:30:00</td>\n",
+       "      <td>2023-11-25</td>\n",
+       "      <td>14:00:00</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>\\N</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1102 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      index  raceId  year  round  circuitId                      name  \\\n",
+       "0         0       1  2009      1          1     Australian Grand Prix   \n",
+       "1         1       2  2009      2          2      Malaysian Grand Prix   \n",
+       "2         2       3  2009      3         17        Chinese Grand Prix   \n",
+       "3         3       4  2009      4          3        Bahrain Grand Prix   \n",
+       "4         4       5  2009      5          4        Spanish Grand Prix   \n",
+       "...     ...     ...   ...    ...        ...                       ...   \n",
+       "1097   1097    1116  2023     19         69  United States Grand Prix   \n",
+       "1098   1098    1117  2023     20         32    Mexico City Grand Prix   \n",
+       "1099   1099    1118  2023     21         18      São Paulo Grand Prix   \n",
+       "1100   1100    1119  2023     22         80      Las Vegas Grand Prix   \n",
+       "1101   1101    1120  2023     23         24      Abu Dhabi Grand Prix   \n",
+       "\n",
+       "            date      time                                                url  \\\n",
+       "0     2009-03-29  06:00:00  http://en.wikipedia.org/wiki/2009_Australian_G...   \n",
+       "1     2009-04-05  09:00:00  http://en.wikipedia.org/wiki/2009_Malaysian_Gr...   \n",
+       "2     2009-04-19  07:00:00  http://en.wikipedia.org/wiki/2009_Chinese_Gran...   \n",
+       "3     2009-04-26  12:00:00  http://en.wikipedia.org/wiki/2009_Bahrain_Gran...   \n",
+       "4     2009-05-10  12:00:00  http://en.wikipedia.org/wiki/2009_Spanish_Gran...   \n",
+       "...          ...       ...                                                ...   \n",
+       "1097  2023-10-22  19:00:00  https://en.wikipedia.org/wiki/2023_United_Stat...   \n",
+       "1098  2023-10-29  20:00:00  https://en.wikipedia.org/wiki/2023_Mexico_City...   \n",
+       "1099  2023-11-05  17:00:00  https://en.wikipedia.org/wiki/2023_S%C3%A3o_Pa...   \n",
+       "1100  2023-11-19  06:00:00  https://en.wikipedia.org/wiki/2023_Las_Vegas_G...   \n",
+       "1101  2023-11-26  13:00:00  https://en.wikipedia.org/wiki/2023_Abu_Dhabi_G...   \n",
+       "\n",
+       "        fp1_date  fp1_time    fp2_date  fp2_time    fp3_date  fp3_time  \\\n",
+       "0             \\N        \\N          \\N        \\N          \\N        \\N   \n",
+       "1             \\N        \\N          \\N        \\N          \\N        \\N   \n",
+       "2             \\N        \\N          \\N        \\N          \\N        \\N   \n",
+       "3             \\N        \\N          \\N        \\N          \\N        \\N   \n",
+       "4             \\N        \\N          \\N        \\N          \\N        \\N   \n",
+       "...          ...       ...         ...       ...         ...       ...   \n",
+       "1097  2023-10-20  17:30:00  2023-10-21  18:00:00          \\N        \\N   \n",
+       "1098  2023-10-27  18:30:00  2023-10-27  22:00:00  2023-10-28  17:30:00   \n",
+       "1099  2023-11-03  14:30:00  2023-11-04  14:30:00          \\N        \\N   \n",
+       "1100  2023-11-17  04:30:00  2023-11-17  08:00:00  2023-11-18  04:30:00   \n",
+       "1101  2023-11-24  09:30:00  2023-11-24  13:00:00  2023-11-25  10:30:00   \n",
+       "\n",
+       "      quali_date quali_time sprint_date sprint_time  circuitId  \n",
+       "0             \\N         \\N          \\N          \\N          1  \n",
+       "1             \\N         \\N          \\N          \\N          2  \n",
+       "2             \\N         \\N          \\N          \\N         17  \n",
+       "3             \\N         \\N          \\N          \\N          3  \n",
+       "4             \\N         \\N          \\N          \\N          4  \n",
+       "...          ...        ...         ...         ...        ...  \n",
+       "1097  2023-10-20   21:00:00  2023-10-21    22:00:00         69  \n",
+       "1098  2023-10-28   21:00:00          \\N          \\N         32  \n",
+       "1099  2023-11-03   18:00:00  2023-11-04    18:30:00         18  \n",
+       "1100  2023-11-18   08:00:00          \\N          \\N         80  \n",
+       "1101  2023-11-25   14:00:00          \\N          \\N         24  \n",
+       "\n",
+       "[1102 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own\n",
     "\n",
-    "\n",
+    "pd.read_sql(text(\"SELECT races_sql.*, circuits_sql.\\\"circuitId\\\" \\\n",
+    "                             FROM races_sql \\\n",
+    "                             LEFT JOIN circuits_sql \\\n",
+    "                             ON races_sql.\\\"circuitId\\\" = circuits_sql.\\\"circuitId\\\" ;\"),con)\n",
     "\n"
    ]
   },
@@ -624,7 +997,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -638,9 +1011,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
